--- a/Customer-Service/Customer-Service/src/main/resources/application.properties
+++ b/Customer-Service/Customer-Service/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port=8082
 spring.datasource.url=jdbc:postgresql://localhost:5432/InventoryDB
 spring.datasource.username=postgres
-spring.datasource.password=@Subbu123
+spring.datasource.password=12345
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.show-sql=true
